Added styles to make the variation selection more prominent

--- a/src/sass/child-styles.css
+++ b/src/sass/child-styles.css
@@ -1,1 +1,849 @@
-/* No CSS *//*# sourceMappingURL=child-styles.css.map */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+  /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+.gform_button {
+  padding: 6px 20px;
+  font-size: 20px;
+}
+
+.gform_footer {
+  text-align: center;
+}
+
+.gform_confirmation_message {
+  font-size: 1rem;
+  text-align: center;
+}
+
+.gfield input,
+.gfield textarea,
+.gfield select {
+  background-color: transparent;
+  border: 2px solid #9bcb3d;
+  border-radius: 3px;
+  color: black;
+}
+
+.gfield input::-webkit-input-placeholder,
+.gfield textarea::-webkit-input-placeholder,
+.gfield select::-webkit-input-placeholder {
+  color: black;
+}
+
+.gform_wrapper .gform_fields .field_sublabel_below .ginput_complex.ginput_container label,
+.gform_wrapper .top_label label.gfield_label {
+  display: none;
+}
+
+.gform_wrapper .gform_fields .gfield.gf-show-label.field_sublabel_below .ginput_complex.ginput_container label {
+  display: block;
+}
+
+.gform_wrapper .gform_fields .gfield.gf-show-label label.gfield_label {
+  display: inline-block;
+}
+
+.woocommerce-loop-product__title,
+.woocommerce-loop-product__link > span.price {
+  text-align: center;
+}
+
+li.product {
+  text-align: center;
+}
+
+body:not(.et-tb).single-product #top-header,
+body:not(.et-tb).single-product #main-header {
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+body:not(.et-tb).single-product #top-header .container,
+body:not(.et-tb).single-product #main-header .container {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+body:not(.et-tb).single-product #main-content .container {
+  max-width: none;
+  padding: 0;
+}
+
+.__deals-divi-list h1 {
+  color: #9bcb3d;
+}
+
+.__deals-divi-list .price {
+  text-align: right;
+}
+
+.__deals-divi-list .price + p {
+  display: none;
+}
+
+.__deals-divi-list .subscription-details {
+  display: none;
+}
+
+.__deals-divi-list .star-rating.wc_views_star_rating {
+  margin-bottom: 20px;
+  text-align: right;
+  width: auto !important;
+}
+
+.__deals-divi-list .star-rating.wc_views_star_rating > span {
+  overflow: unset;
+}
+
+.__deals-divi-list .star-rating.wc_views_star_rating::before,
+.__deals-divi-list .star-rating.wc_views_star_rating span::before {
+  float: none;
+  left: 0;
+  right: 0;
+}
+
+.__deals-divi-list .button {
+  text-align: right;
+}
+
+.first-payment-date {
+  display: none;
+}
+
+/**
+ * Set up a decent box model on the root element
+ */
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/**
+ * Make all elements from the DOM inherit from the parent box-sizing
+ * Since `*` has a specificity of 0, it does not override the `html` value
+ * making all elements inheriting from the root box-sizing value
+ * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+ */
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+/**
+ * Basic styles for links
+ */
+a {
+  text-decoration: none;
+}
+
+a:hover, a:active, a:focus {
+  text-decoration: underline;
+}
+
+/**
+ * Basic styles for Divi links
+ */
+a.et-pb-slider-arrow, a.et-pb-arrow-prev, a.et-pb-arrow-next, a.et_pb_video_play, a.et_pb_video_play:active, a.et_pb_video_play:focus, a.et_pb_video_play:hover, a.et_pb_font_icon {
+  text-decoration: none;
+}
+
+a:hover, a:active, a:focus {
+  text-decoration: none;
+}
+
+@media (max-width: 767px) {
+  .et_pb_module.et_pb_fullwidth_header.et_pb_fullwidth_header_0 {
+    min-height: unset;
+  }
+  .et_pb_module.et_pb_fullwidth_header .et_pb_fullwidth_header_container {
+    width: 100%;
+  }
+  .et_pb_module.et_pb_fullwidth_header .et_pb_fullwidth_header_container .header-content {
+    width: 100%;
+  }
+  .et_pb_module.et_pb_fullwidth_header .et_pb_fullwidth_header_container .header-content h1.et_pb_module_header,
+  .et_pb_module.et_pb_fullwidth_header .et_pb_fullwidth_header_container .header-content h2.et_pb_module_header,
+  .et_pb_module.et_pb_fullwidth_header .et_pb_fullwidth_header_container .header-content h3.et_pb_module_header,
+  .et_pb_module.et_pb_fullwidth_header .et_pb_fullwidth_header_container .header-content h4.et_pb_module_header,
+  .et_pb_module.et_pb_fullwidth_header .et_pb_fullwidth_header_container .header-content h5.et_pb_module_header,
+  .et_pb_module.et_pb_fullwidth_header .et_pb_fullwidth_header_container .header-content h6.et_pb_module_header {
+    font-size: 2rem;
+  }
+}
+
+.--novspace {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-bottom: 0 !important;
+  padding-top: 0 !important;
+}
+
+.--vertical-row-align {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+}
+
+.__page-header
+.et_pb_fullwidth_header_0.et_pb_fullwidth_header
+.header-content h1 {
+  font-size: 2.6rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-shadow: 0.08em 0.08em 0.08em rgba(0, 0, 0, 0.4);
+}
+
+.__page-header
+.et_pb_fullwidth_header_0.et_pb_fullwidth_header
+.header-content .et_pb_fullwidth_header_subhead {
+  font-size: 1.875rem;
+  font-weight: 600;
+}
+
+/**
+ * Basic typography style for copy text
+ */
+body {
+  color: black;
+  font: normal 125%/1.4 Nexa, sans-serif;
+}
+
+/**
+ * Clear inner floats
+ */
+.clearfix::after {
+  clear: both;
+  content: '';
+  display: table;
+}
+
+/**
+ * Main content containers
+ * 1. Make the container full-width with a maximum width
+ * 2. Center it in the viewport
+ * 3. Leave some space on the edges, especially valuable on small screens
+ */
+.container {
+  max-width: 1080px;
+  /* 1 */
+  margin-left: auto;
+  /* 2 */
+  margin-right: auto;
+  /* 2 */
+  padding-left: 20px;
+  /* 3 */
+  padding-right: 20px;
+  /* 3 */
+  width: 100%;
+  /* 1 */
+}
+
+/**
+ * Hide text while making it readable for screen readers
+ * 1. Needed in WebKit-based browsers because of an implementation bug;
+ *    See: https://code.google.com/p/chromium/issues/detail?id=457146
+ */
+.hide-text {
+  overflow: hidden;
+  padding: 0;
+  /* 1 */
+  text-indent: 101%;
+  white-space: nowrap;
+}
+
+/**
+ * Hide element while making it readable for screen readers
+ * Shamelessly borrowed from HTML5Boilerplate:
+ * https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css#L119-L133
+ */
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+#top-header .et-cart-info > span:nth-child(1) {
+  font-size: 1.5em;
+}
+
+#main-header {
+  padding: 1rem 0;
+  -webkit-box-shadow: unset;
+          box-shadow: unset;
+}
+
+#main-header #logo {
+  max-height: 80px;
+}
+
+#main-header .sub-menu,
+#main-header .et_mobile_menu {
+  border-color: #9bcb3d;
+}
+
+#main-header a {
+  text-decoration: none;
+}
+
+#main-header.et-fixed-header {
+  -webkit-box-shadow: unset !important;
+          box-shadow: unset !important;
+}
+
+@media (min-width: 1025px) {
+  #main-header .logo_container {
+    top: -60px;
+    width: auto;
+  }
+  #main-header #main-header {
+    min-height: 8remrem !important;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  #main-header #main-header.et-fixed-header {
+    min-height: 5rem !important;
+  }
+  #main-header #et-top-navigation {
+    padding: 0 !important;
+  }
+  #main-header #et-top-navigation #et_top_search {
+    margin-top: 4rem;
+  }
+  #main-header #top-menu {
+    padding-bottom: 3remrem;
+  }
+  #main-header #top-menu > li {
+    padding-top: 3remrem;
+    padding-right: 1rem;
+  }
+  #main-header #top-menu > li > a {
+    padding: 0.5rem !important;
+  }
+  #main-header #top-menu .menu-item-has-children > a:first-child:after {
+    position: relative;
+    margin-left: 0.5rem;
+  }
+  #main-header .social-title {
+    display: none;
+  }
+}
+
+@media (min-width: 0) and (max-width: 1200px) {
+  #top-menu-nav,
+  #et_top_search {
+    display: none;
+  }
+  #et_mobile_nav_menu {
+    display: block;
+  }
+  #et_mobile_nav_menu .mobile_menu_bar:before {
+    color: #9bcb3d;
+  }
+}
+
+/* Make buttons line up to the bottom of rows https://stevenstromick.com/divi-tutorials/align-buttons-to-the-bottom-of-a-row */
+@media (min-width: 1025px) {
+  .--ss_row_align_buttons .et_pb_column {
+    padding-bottom: 4rem;
+  }
+  .--ss_row_align_buttons .et_pb_button_module_wrapper {
+    position: absolute;
+    bottom: 1.25rem;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+}
+
+footer .et_pb_social_media_follow li a.icon {
+  border-radius: 50%;
+}
+
+.small-button,
+.et_pb_button,
+.et_pb_module .et_pb_button,
+.gform_button,
+.woocommerce button.button:disabled,
+.woocommerce button.button:disabled[disabled],
+.woocommerce-page.et_pb_button_helper_class button.button,
+.woocommerce-page.et_pb_button_helper_class a.button.alt,
+.woocommerce-page.et_pb_button_helper_class a.button,
+.woocommerce a.button,
+.woocommerce-page a.button,
+#wcpt-26055 .wcpt-table a.wcpt-button {
+  background-color: #9bcb3d;
+  border-color: #ffffff;
+  border-radius: 3px;
+  border-style: solid;
+  padding: 0.375rem 1.25rem;
+  color: #ffffff !important;
+  font-size: 1.25rem;
+  font-weight: 700;
+  white-space: normal;
+}
+
+.small-button:hover, .small-button:active, .small-button:focus,
+.et_pb_button:hover,
+.et_pb_button:active,
+.et_pb_button:focus,
+.et_pb_module .et_pb_button:hover,
+.et_pb_module .et_pb_button:active,
+.et_pb_module .et_pb_button:focus,
+.gform_button:hover,
+.gform_button:active,
+.gform_button:focus,
+.woocommerce button.button:disabled:hover,
+.woocommerce button.button:disabled:active,
+.woocommerce button.button:disabled:focus,
+.woocommerce button.button:disabled[disabled]:hover,
+.woocommerce button.button:disabled[disabled]:active,
+.woocommerce button.button:disabled[disabled]:focus,
+.woocommerce-page.et_pb_button_helper_class button.button:hover,
+.woocommerce-page.et_pb_button_helper_class button.button:active,
+.woocommerce-page.et_pb_button_helper_class button.button:focus,
+.woocommerce-page.et_pb_button_helper_class a.button.alt:hover,
+.woocommerce-page.et_pb_button_helper_class a.button.alt:active,
+.woocommerce-page.et_pb_button_helper_class a.button.alt:focus,
+.woocommerce-page.et_pb_button_helper_class a.button:hover,
+.woocommerce-page.et_pb_button_helper_class a.button:active,
+.woocommerce-page.et_pb_button_helper_class a.button:focus,
+.woocommerce a.button:hover,
+.woocommerce a.button:active,
+.woocommerce a.button:focus,
+.woocommerce-page a.button:hover,
+.woocommerce-page a.button:active,
+.woocommerce-page a.button:focus,
+#wcpt-26055 .wcpt-table a.wcpt-button:hover,
+#wcpt-26055 .wcpt-table a.wcpt-button:active,
+#wcpt-26055 .wcpt-table a.wcpt-button:focus {
+  background-color: #9bcb3d;
+}
+
+#top-header .--nav-member-button a,
+#top-header .--nav-vendor-button a,
+.et-fixed-header#top-header .--nav-member-button a,
+.et-fixed-header#top-header .--nav-vendor-button a {
+  padding: 1rem;
+  border-radius: 3px;
+  color: white;
+  font-size: 1rem;
+}
+
+.et_mobile_menu li.--nav-member-button, .et_mobile_menu li.--nav-vendor-button {
+  text-align: center;
+}
+
+.et_mobile_menu li.--nav-member-button a, .et_mobile_menu li.--nav-vendor-button a {
+  color: white;
+}
+
+.--nav-member-button a {
+  background-color: #9bcb3d;
+}
+
+.--nav-vendor-button a {
+  background-color: black;
+}
+
+body.single-product table.variations td.label {
+  display: table-row;
+}
+
+body.single-product table.variations td.label:before {
+  content: "Select ";
+}
+
+body.single-product table.variations td.label label {
+  font-size: 1.5em;
+  margin-bottom: 15px;
+  display: block;
+}
+
+body.single-product table.variations td.value {
+  display: table-row;
+}
+
+#page-container {
+  overflow: hidden;
+}
+
+.et_pb_fullwidth_section.__page-header .et_pb_fullwidth_header_container {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+/* Make buttons line up to the bottom of rows on desktop https://stevenstromick.com/divi-tutorials/align-buttons-to-the-bottom-of-a-row */
+@media (min-width: 1025px) {
+  .--ss_row_align_buttons .et_pb_column {
+    padding-bottom: 4rem;
+  }
+  .--ss_row_align_buttons .et_pb_button_module_wrapper {
+    position: absolute;
+    bottom: 1.25rem;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+}
+
+.--blurb-description-padding .et_pb_blurb_description {
+  padding: 0 1rem;
+}
+/*# sourceMappingURL=child-styles.css.map */
